sinalcabo/force-app/main/default/objects/SC_Area_Sigla__mdt/SC_Area_Sigla__mdt.object-meta.xml
<CustomObject>
    <label>SC Área e Sigla</label>
    <pluralLabel>SC Áreas e Siglas</pluralLabel>
</CustomObject>