sinalcabo/force-app/main/default/objects/SC_Area_Sigla__mdt/fields/Activa__c.field-meta.xml
<CustomField>
    <fullName>Activa__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Permite desligar uma correspondencia sem a apagar. Com isto a false, as oportunidades dessa area passam a nascer sem numero de proposta.</description>
    <label>Activa</label>
    <type>Checkbox</type>
</CustomField>