sinalcabo/force-app/main/default/objects/SC_Area_Sigla__mdt/fields/Area_Label__c.field-meta.xml
<CustomField>
    <fullName>Area_Label__c</fullName>
    <description>Area de negocio exactamente como aparece no campo Area de Negocio da oportunidade. E&apos; por este texto que o codigo faz a correspondencia, e nao pelo nome do registo, porque as areas tem acentos e o caracter &amp; que um DeveloperName nao aceita. Mesmo padrao do SC_BU_Director, que casa pelo BU_Label.</description>
    <label>Área de Negócio</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>