sinalcabo/force-app/main/default/objects/SC_Area_Sigla__mdt/fields/Sigla__c.field-meta.xml
<CustomField>
    <fullName>Sigla__c</fullName>
    <description>Sigla que entra no numero da proposta, como o cliente a definiu no organograma (ex. UN SOLAR, DN FM, DC ST). Duas areas podem partilhar a mesma sigla de proposito: nesse caso partilham tambem a serie de numeros, porque o contador e&apos; chaveado pela sigla e nao pela area.</description>
    <label>Sigla da Unidade</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>